--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "1.24.0",
+    "loglevel": "1.7.1",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
